added footnote about data availability

--- a/public/projects/edmonton-snow-crisis.html
+++ b/public/projects/edmonton-snow-crisis.html
@@ -382,6 +382,10 @@
             <strong>Context:</strong> Edmonton's population grew from 1.26M (2014) to 1.59M (2025) — a 26% increase. During this same period, snow complaints increased by 7% while the snow clearing budget only grew 6%.
         </div>
 
+        <div class="context-note" style="background: rgba(255, 183, 77, 0.1); border-left-color: var(--warning);">
+            <strong>Note:</strong> Data for January 2026 was not available at the time of this analysis. We will update once it becomes available.
+        </div>
+
         <div class="stat-cards">
             <div class="stat-card">
                 <div class="value">209,206</div>
