--- a/public/projects/edmonton-snow-crisis.html
+++ b/public/projects/edmonton-snow-crisis.html
@@ -6,6 +6,7 @@
     <title>Edmonton's Snow Clearing Crisis | Data Story</title>
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/logo.png">
     <style>
         :root {
             --background: #0f0f0f;
