--- a/public/projects/spotify-popularity.html
+++ b/public/projects/spotify-popularity.html
@@ -13,9 +13,9 @@
             --foreground: #e0e0e0;
             --surface: #1a1a1a;
             --surface-hover: #2a2a2a;
-            --primary: #1DB954;
-            --primary-light: #1ed760;
-            --accent: #b3b3b3;
+            --primary: #2d6a4f;
+            --primary-light: #95d5b2;
+            --accent: #b7e4c7;
             --muted: #888888;
             --negative: #e57373;
             --warning: #ffb74d;
@@ -124,7 +124,7 @@
         }
 
         .context-note {
-            background: rgba(29, 185, 84, 0.1);
+            background: rgba(45, 106, 79, 0.1);
             border-left: 4px solid var(--primary);
             padding: 16px 20px;
             margin: 24px 0;
@@ -175,7 +175,7 @@
 
         .stat-card.highlighted {
             transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(29, 185, 84, 0.3);
+            box-shadow: 0 8px 24px rgba(45, 106, 79, 0.3);
         }
 
         .stat-card.dimmed {
@@ -202,8 +202,8 @@
         }
 
         .insight-box {
-            background: linear-gradient(135deg, rgba(29, 185, 84, 0.15) 0%, rgba(29, 185, 84, 0.05) 100%);
-            border: 1px solid rgba(29, 185, 84, 0.3);
+            background: linear-gradient(135deg, rgba(45, 106, 79, 0.15) 0%, rgba(45, 106, 79, 0.05) 100%);
+            border: 1px solid rgba(45, 106, 79, 0.3);
             border-radius: 12px;
             padding: 24px;
             margin: 24px 0;
@@ -342,7 +342,7 @@
 
         .genre-card.highlighted {
             transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(29, 185, 84, 0.3);
+            box-shadow: 0 8px 24px rgba(45, 106, 79, 0.3);
         }
 
         .genre-card.dimmed {
@@ -695,8 +695,9 @@
     <script>
         // Color palette
         const colors = {
-            primary: '#1DB954',
-            primaryLight: '#1ed760',
+            primary: '#2d6a4f',
+            primaryLight: '#95d5b2',
+            accent: '#b7e4c7',
             background: '#0f0f0f',
             surface: '#1a1a1a',
             foreground: '#e0e0e0',
@@ -819,7 +820,7 @@
                 168, 152, 138, 125, 112, 100, 89, 79, 70, 62, 55, 48, 42, 37, 32, 28, 24, 21, 18, 15, 13, 11, 9, 7, 5, 3],
             type: 'bar',
             marker: {
-                color: Array.from({length: 101}, (_, i) => `rgba(29, 185, 84, ${0.3 + (i/100) * 0.7})`),
+                color: Array.from({length: 101}, (_, i) => `rgba(45, 106, 79, ${0.3 + (i/100) * 0.7})`),
             },
             hovertemplate: 'Popularity: %{x}<br>Tracks: %{y}<extra></extra>'
         }], {
@@ -1095,7 +1096,7 @@
             type: 'bar',
             orientation: 'h',
             marker: {
-                color: data.artistCounts.map((_, i) => `rgba(29, 185, 84, ${1 - i * 0.08})`)
+                color: data.artistCounts.map((_, i) => `rgba(45, 106, 79, ${1 - i * 0.08})`)
             },
             text: data.artistCounts,
             textposition: 'outside',
