--- a/public/projects/spotify-popularity.html
+++ b/public/projects/spotify-popularity.html
@@ -676,11 +676,11 @@
                 <p style="color: var(--muted); margin-bottom: 20px; font-size: 1rem;">
                     This analysis was built using Python, pandas, scikit-learn, and statsmodels. View the full Jupyter notebook with all models and visualizations on GitHub.
                 </p>
-                <a href="https://github.com/amoredatus/website/blob/main/public/projects/spotify-analysis.ipynb" target="_blank"
+                <a href="https://nbviewer.org/github/amoredatus/website/blob/main/public/projects/spotify-analysis.ipynb" target="_blank"
                    style="display: inline-block; padding: 14px 28px; background: var(--primary); color: var(--background);
                           border-radius: 6px; text-decoration: none; font-weight: 600; font-size: 1rem;
                           transition: background 0.2s ease;">
-                    View Notebook on GitHub →
+                    View Full Notebook →
                 </a>
             </div>
         </div>
